src/components/ExperimentDetails/Layouts/OneColumnOverview.scss
@import "../../../App";

.one-column-overview {
  @include gutters;
  padding-bottom: 96px;

  &__experiment-header {
    width: 100vw;
    padding-top: 20px;
    padding-bottom: 24px;
    background-color: $white;
    @include negativeMarginAndPaddingGutters();
    overflow: hidden;


    &-overview {
      @include headline3;
      color: $almaMater;
      margin-bottom: 16px;

    }

    &-tags {
      display: flex;
    }

    &-tag {
      color: $charcoalLightest;
      margin-right: 16px;

      &-label {
        @include labelSmall;
      }
    }
  }


  &__trials-header {
    @include headline2;
    color: $almaMater;
    margin-bottom: 42px;
    @include maxWidth(710px) {
      margin-bottom: 24px;
    }
  }

  &__trials-section {
    grid-column: 2;
  }

  &__trials-header-box {
    display: flex;
    justify-content: flex-end;
    align-items: flex-start;
    margin-top: 36px;
    margin-bottom: 24px;

    @include maxWidth(710px) {
      flex-direction: column;
      margin-bottom: 26px;
      justify-content: flex-start;
    }
  }

}

